--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,12 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# ide
+.idea/
+
+# other
+weibo/cookies
+weibo/html_file
+weibo/screenshot
+weibo/secure.py
