--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -6,6 +6,6 @@
 [settings]
 default = weibo.settings
 
-[deploy]
-#url = http://localhost:6800/
+[deploy:wfh44115]
+url = http://localhost:6800/
 project = weibo
